@@ -4,9 +4,6 @@ import static io.extact.rms.client.console.ui.ClientConstants.*;
 import static io.extact.rms.client.console.ui.textio.TextIoUtils.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import lombok.RequiredArgsConstructor;
 
 import io.extact.rms.client.api.RentalReservationClientApi;
 import io.extact.rms.client.api.dto.RentalItemClientDto;
@@ -16,6 +13,7 @@ import io.extact.rms.client.api.exception.BusinessFlowClientException;
 import io.extact.rms.client.console.ui.TransitionMap.RmsScreen;
 import io.extact.rms.client.console.ui.TransitionMap.Transition;
 import io.extact.rms.client.console.ui.textio.TextIoUtils;
+import lombok.RequiredArgsConstructor;
 
 @RequiredArgsConstructor
 public class InquiryReservationScreen implements RmsScreen {
@@ -42,7 +40,7 @@ public class InquiryReservationScreen implements RmsScreen {
                 .withSelectableValues(
                         items.stream()
                             .map(RentalItemClientDto::getId)
-                            .collect(Collectors.toList()),
+                            .toList(),
                         SCREEN_BREAK_VALUE)
                 .read("レンタル品番号");
         if (TextIoUtils.isBreak(selectedItem)) {
